z-index fix
Former-commit-id: 75a88105f1b857968ee8f749637efebb0f780e90

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -43,7 +43,7 @@
   padding: 0px;
   background-position: center center;
   position: relative;
-  z-index: 9;
+  z-index: 1;
   border-radius: 4px;
   overflow: hidden;
 
