--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -3,7 +3,7 @@
   background: transparent;
   transition: all 0.3s ease;
   padding: 30px 0;
-  z-index: 1;
+  z-index: 2;
   position: relative;
   &-fixed {
     position: absolute;
